<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/topbar_bg"
    >
    <RelativeLayout
        android:id="@+id/rl_mylogin_Layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"

        >
        <RelativeLayout
            android:id="@+id/header_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/header_img"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:src="@mipmap/user_offline"
                />
        </RelativeLayout>

        <LinearLayout
            android:layout_below="@+id/header_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:orientation="vertical"
            >
            <TextView
                android:id="@+id/user_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/username"
                android:textSize="18sp"
                />
            <TextView
                android:id="@+id/tv_mobile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center_vertical"
                android:layout_marginTop="4dp"
                android:gravity="center"
                android:text=""
                android:textColor="@color/color_white"
                android:textSize="18sp" />
        </LinearLayout>
    </RelativeLayout>
    <LinearLayout
        android:id="@+id/mml_loginout_rl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical"
        >
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#cdcdcd" />
        <TextView
            android:id="@+id/tv_about"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:drawableLeft="@mipmap/icon_about_me"
            android:drawablePadding="10dp"
            android:gravity="center_vertical"
            android:padding="15dp"
            android:text="@string/about"
            android:textColor="@color/color_white"
            android:textSize="15sp"
            />
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/baseGrayLit"
            />

        <TextView
            android:id="@+id/mml_feedback_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:drawableLeft="@mipmap/icon_menu_feedback"
            android:drawablePadding="10dp"
            android:gravity="center_vertical"
            android:padding="15dp"
            android:text="反馈"
            android:textColor="@color/color_white"
            android:textSize="15sp" />
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/baseGrayLit"
            />
        <TextView
            android:id="@+id/mml_msg_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:drawableLeft="@mipmap/icon_menu_msg"
            android:drawablePadding="10dp"
            android:gravity="center_vertical"
            android:padding="15dp"
            android:text="消息"
            android:textColor="@color/color_white"
            android:textSize="15sp" />
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/baseGrayLit"
            />
        <TextView
            android:id="@+id/mml_checkupdate_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:drawableLeft="@mipmap/icon_menu_check_update"
            android:drawablePadding="10dp"
            android:gravity="center_vertical"
            android:padding="15dp"
            android:text="@string/check_update"
            android:textColor="@color/color_white"
            android:textSize="15sp"
            />
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/baseGrayLit"
            />
        <TextView
            android:id="@+id/offlinemap_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:drawableLeft="@mipmap/icon_menu_map_offline"
            android:drawablePadding="10dp"
            android:gravity="center_vertical"
            android:padding="15dp"
            android:text="@string/downloadmap"
            android:textColor="@color/color_white"
            android:textSize="15sp"
            />
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/baseGrayLit"
            />
        <TextView
            android:id="@+id/loginout_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:drawableLeft="@mipmap/icon_menu_logoout"
            android:drawablePadding="10dp"
            android:gravity="center_vertical"
            android:padding="15dp"
            android:text="@string/loginout"
            android:textColor="@color/color_white"
            android:textSize="15sp"
            />
    </LinearLayout>
</RelativeLayout>