<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:mapbox="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <RelativeLayout
        android:id="@+id/rl_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <!--顶部-->
        <!--底部tab-->
        <LinearLayout
            android:id="@+id/ll_bottom_tab"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_alignParentBottom="true"
            android:background="@color/topbar_bg"
            android:baselineAligned="true"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <RelativeLayout
                android:id="@+id/rl_route"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.0">

                <ImageView
                    android:id="@+id/iv_route"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:contentDescription="@null"
                    android:src="@mipmap/route" />

                <TextView
                    android:id="@+id/tv_route"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/iv_route"
                    android:layout_centerHorizontal="true"
                    android:text="@string/bottom_tab_wantknow"
                    android:textColor="@color/bottomtab_normal"
                    android:textSize="12sp" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rl_bus"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.0">

                <ImageView
                    android:id="@+id/iv_bus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:contentDescription="@null"
                    android:src="@mipmap/mainbus" />

                <TextView
                    android:id="@+id/tv_bus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/iv_bus"
                    android:layout_centerHorizontal="true"
                    android:text="@string/iv_bus"
                    android:textColor="@color/bottomtab_normal"
                    android:textSize="12sp" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rl_my"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.0">

                <ImageView
                    android:id="@+id/iv_my"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:contentDescription="@null"
                    android:src="@mipmap/my" />

                <TextView
                    android:id="@+id/tv_my"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/iv_my"
                    android:layout_centerHorizontal="true"
                    android:text="@string/bottom_tab_my"
                    android:textColor="@color/bottomtab_normal"
                    android:textSize="12sp" />
            </RelativeLayout>
        </LinearLayout>
        <!--内容部分-->
        <LinearLayout
            android:id="@+id/content_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/line"
            android:orientation="vertical">

            <android.support.design.widget.CoordinatorLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <com.mapbox.mapboxsdk.maps.MapView
                    android:id="@+id/mapView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                </com.mapbox.mapboxsdk.maps.MapView>

                <RelativeLayout
                    android:id="@+id/rl_nearby"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:layout_marginTop="20dp"
                    android:background="@color/color_white"
                    android:focusableInTouchMode="true">

                    <ImageView
                        android:id="@+id/clean_keywords"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_alignParentRight="true"
                        android:layout_marginRight="15dp"
                        android:src="@mipmap/ic_close"
                        android:visibility="gone" />

                    <TextView
                        android:id="@+id/main_keywords"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_toLeftOf="@+id/clean_keywords"
                        android:clickable="true"
                        android:completionThreshold="1"
                        android:drawableLeft="@mipmap/ic_search"
                        android:dropDownVerticalOffset="1.0dip"
                        android:gravity="center_vertical"
                        android:hint="搜索附近"
                        android:imeOptions="actionDone"
                        android:inputType="text|textAutoComplete"
                        android:maxLength="20"
                        android:paddingLeft="10dp"
                        android:textColor="#000000"
                        android:textColorHint="@color/text_hint"
                        android:textSize="16sp" />
                </RelativeLayout>

                <ImageView
                    android:id="@+id/iv_map_type_switch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_gravity="end|top"
                    android:layout_marginRight="15dp"
                    android:layout_marginTop="75dp"
                    android:background="@drawable/map_layer_change"
                    android:src="@mipmap/map_layer_change" />

                <android.support.design.widget.FloatingActionButton
                    android:id="@+id/location_toggle_fab"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|left"
                    android:layout_margin="15dp"
                    app:backgroundTint="@color/color_white"
                    app:srcCompat="@drawable/ic_my_location_24dp"
                    tools:ignore="VectorDrawableCompat" />

                <LinearLayout
                    android:id="@+id/navigation_zoom_layout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_gravity="bottom|end"
                    android:layout_margin="15dp"
                    android:background="@drawable/zoom"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/navigation_zoom_in"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@mipmap/zoomin"
                        android:contentDescription="放大" />

                    <View
                        android:id="@+id/zoom_line"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/zoomline" />

                    <ImageView
                        android:id="@+id/navigation_zoom_out"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@mipmap/zoomout"
                        android:contentDescription="缩小" />
                </LinearLayout>
            </android.support.design.widget.CoordinatorLayout>
        </LinearLayout>

        <View
            android:id="@+id/line"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_above="@id/ll_bottom_tab"
            android:background="@color/line" />
    </RelativeLayout>

</FrameLayout>
